# Velocity-Model

./: .gitattributes  .gitignore  BrocherCorrelations.c  Build  CMakeLists.txt  CVM  EPtomo2010subMod.c  GENERATE_VELOCITY_MOD_Wellington_new.txt  GENERATE_VELOCITY_MOD_trial.txt  Holder  Make  NaNsubMod.c  README.md  README_mpi.md  Rapid_Model_Parameters_Extract.txt  assignValues.c  basementRockSurf.c  basinSubModels.c  calculateSurfaceLatLonIndex.c  constants.h  determineIfWithinBasinLatLon.c  determineSurfaceDepths.c  domainOutline.txt  enforceSurfaceDepths.c  findAdjacentPoints.c  findClosestPoint.c  findSubVeloModelInd.c  functions.h  generateLatLonForPlotting.c  generateModelGrid.c  generateProfile.c  generateSurfaceVectors.c  getSurfSubModNames.c  getSurfaceValues.c  linearInterpolation.c  load1dVeloSubModel.c  loadBasins.c  loadBoundary.c  loadCanterburyBasin.c  loadSurface.c  (+16 more)
Data/: basins.yaml
Data/1D_Velocity_Model/: 1D_20p6.txt  1D_Custom.txt  Cant1D_v1.fd_modfile  Cant1D_v2.fd_modfile  Cant1D_v2_Pliocene_Enforced.fd_modfile  PCMX.fd_modfile
Data/Boundaries/: BPVBoundary.txt  BasinBoundaryTemp.txt  BusanBasinBoundary.txt  CanterburyBasinBoundary.txt  CanterburyBasinBoundaryLarge.txt  NewCanterburyBasinBoundary_WGS84_1m.txt  QuaternarySurfacesBoundary.txt  SmoothBoundaryVec.txt  WaikatoHaurakiBasinEdge_WGS84.txt
ExtractedSliceParameters/: SLICE_PARAMETERS_EXTRACTED_README.txt
GeneratedSliceParameters/: SLICE_PARAMETERS_GENERATED_README.txt  SliceParametersGenerated.txt
MPI_Examples/: nzvm_020m.slurm  nzvm_020m_gen.txt  nzvm_050m.slurm  nzvm_050m_gen.txt  nzvm_100m.slurm  nzvm_100m_gen.txt
Sample_Input_Text_Files/: EXTRACT_VELOCITY_SLICES.txt  GENERATE_MULTIPLE_PROFILES(constant_spacing_example).txt  GENERATE_MULTIPLE_PROFILES(variable_spacing_example).txt  GENERATE_MULTIPLE_PROFILES.txt  GENERATE_PROFILE.txt  GENERATE_THRESHOLD.txt  GENERATE_VELOCITIES_ON_GRID.txt  GENERATE_VELOCITY_MOD.txt  GENERATE_VELOCITY_SLICES.txt
SecondaryInputFiles/: GRIDPOINT_COORDS_README.txt  GridpointCoords.txt  MULTIPLE_PROFILE_PARAMERERS_README.txt  MultipleProfileParameters.txt  PROFILE_DEPTH_POINTS_README.txt  ProfileDepthPoints.txt  ProfileDepthPoints1D.txt  SLICE_PARAMETERS_EXTRACTED_README.txt  SLICE_PARAMETERS_GENERATED_README.txt  SliceParametersExtracted.txt  SliceParametersGenerated.txt
SliceParameters/: SliceParametersExtracted.txt  SliceParametersGenerated.txt
SliceParametersNZ/: SliceParametersExtracted.txt
Velocity_Model/: README.md  basins.py  z.py
Velocity_Model-UCGMSIM.xcodeproj/: project.pbxproj
scripts/: get_z.py  station_containment.py
src/: Addition_of_new_basins_readme.md  BrocherCorrelations.c  Build  EPtomo2010subMod.c  Holder  Make  NaNsubMod.c  assignValues.c  basinSubModelList.c  basinSubModels.c  callRoutines.c  constants.h  createOutputDirectories.c  determineSurfaceDepths.c  extractPartialMesh.c  findAdjacentPoints.c  findSubVeloModelInd.c  ftoa.c  functions.h  generateLatLonForPlotting.c  generateModelGrid.c  generateProfile.c  getSurfSubModNames.c  linearInterpolation.c  loadAllData.c  loadBasins.c  loadSurface.c  main.c  makefile  makefile.linux  makefile.mac  makefile.mpi  makefile.omp  mathFunctions.c  perturbationSubMod.c  pointInPoly.c  readWriteInputFiles.c  sliceFunctions.c  structs.h  v1DsubMod.c  (+4 more)
visualisation/: README.md  nzvm.py
(+937 files in other folders)
