set(SRCS 
BrocherCorrelations.c
EPtomo2010subMod.c
NaNsubMod.c
assignValues.c
basementRockSurf.c
basinSubModels.c
calculateSurfaceLatLonIndex.c
determineIfWithinBasinLatLon.c
determineSurfaceDepths.c
enforceSurfaceDepths.c
findAdjacentPoints.c
findClosestPoint.c
findSubVeloModelInd.c
generateLatLonForPlotting.c
generateModelGrid.c
generateProfile.c
generateSurfaceVectors.c
getSurfSubModNames.c
getSurfaceValues.c
linearInterpolation.c
load1dVeloSubModel.c
loadBasins.c
loadBoundary.c
loadCanterburyBasin.c
loadSurface.c
main.c
mathFunctions.c
negInfSurf.c
plotExtracts.c
pointInPoly.c
posInfSurf.c
readSliceParameters.c
sliceFunctions.c
v1DsubMod.c
writeCVMData.c
writeGridPoints.c
writeLatLonData.c
writeLogFiles.c)


add_executable(CVM ${SRCS})